Fix incorrect blink_gc memory dump caused by r383965

BUG=600574

Review URL: https://codereview.chromium.org/1853423003

Cr-Commit-Position: refs/heads/master@{#385120}

Former-commit-id: ff17b14213cf7b5e348d230305e458e1d1f22a18